Removed more fixed positioning on iOS

--- a/assets/scss/_sections/_section-has-image.scss
+++ b/assets/scss/_sections/_section-has-image.scss
@@ -97,3 +97,10 @@
     }
   }
 }
+
+
+.is-ios {
+  .section-bg-image {
+    position: absolute;
+  }
+}
